// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders props when passed in 1`] = `
<text
  className="sc-bdVaJa iCJtsk"
>
  axis label
</text>
`;

exports[`renders props when passed in 2`] = `
<text
  className="sc-bdVaJa fFNPsM"
>
  axis label
</text>
`;

exports[`renders props when passed in 3`] = `
<text
  className="sc-bdVaJa jWwhba"
>
  axis label
</text>
`;

exports[`renders successfully 1`] = `
<text
  className="sc-bdVaJa fFNPsM"
/>
`;

exports[`renders text when passed in successfully 1`] = `
<text
  className="sc-bdVaJa fFNPsM"
>
  x-axis
</text>
`;
